Changes from jTDS 1.2.1
=======================

08/05/2007 - Brian Heineman
 o Applied patch [1592113] NTLMv2 properties on datasource.
 o Applied patch [1236417] 64-bit support for Single Sign On (SSO)
 o Applied patch [1504761] Itanium and AMD64/EM64T 64 bit support for SSO
 o Implemented feature [1491811] sqlState code for snapshot conflict.
 o Updated SQL Server sqlState codes.
 o Updated default property of loginTimeout to 60 seconds instead of waiting
   indefinitely; addresses bug [1744375] Incorrect port configuration causes hang

08/02/2007 - Brian Heineman
 o Corrected bug [1765905] Driver version miscellanea is incorrect;
   updated to 1.2.2.

===============================================================================
07/12/2007 - jTDS 1.2.1 released
===============================================================================

Changes from jTDS 1.2
=====================

07/12/2007 - Brian Heineman
 o Applied patch from Alin Sinpalean for concurrent batch updates.
 o Corrected Java 1.3/1.4 compile problem.

07/11/2007 - Brian Heineman
 o Applied patch from Alin Sinpalean for cursor exception handling.
 
07/08/2007 - Brian Heineman
 o Corrected bug [1571660] Changed reference from Statement.EXECUTE_FAILED
   (which was added in Java 1.4) to JtdsStatement.EXECUTE_FAILED.
 o Applied patch [1567127] Eclipse javadoc warnings.
 o Applied patch [1567332] Updated build file to work with or without
   backslashes on Windows.  This also fixes the problem of having spaces
   in the JAVA_HOME path.
 o Applied patch [1567151] HTML validation patches.
 o Applied patch [1567994] Updated equality checks.
 o Corrected bug [1623668] Lost apostrophes in statement parameter
   values (prepareSQL=0) by applying the patch mentioned in the issue;
   added test to ensure that there are no regressions.
 o Corrected bug [1437845] milliseconds are lost under JRE 1.3 by applying
   the patch attached to the issue.